blue-green-gateway/test-deployments.yaml

apiVersion: v1
kind: Pod
metadata:
  name: bash-curl
apiVersion: v1
kind: Pod
metadata:
  name: bash-curl
  labels:
    name: bash-curl
spec:
  containers:
  - name: app
    image: vasu1711/bash-curl:latest  
    command: ['sh', '-c', 'sleep 3600']
