blue-green-gateway/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: custom-gateway
  labels:
    app: custom-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: custom-gateway
  template:
    metadata:
      labels:
        app: custom-gateway
    spec:
      serviceAccountName: gateway-service-account
      containers:
      - name: custom-gateway
        image: vasu1711/gateway:itr1
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
---

apiVersion: v1
kind: Service
metadata:
  name: custom-gateway
spec:
  selector:
    app: custom-gateway
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
